compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__javascript_unsafe_int_in_pattern.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn go() {\n  let assert <<9_007_199_254_740_992:64>> = <<>>\n}\n"
---
----- SOURCE CODE

pub fn go() {
  let assert <<9_007_199_254_740_992:64>> = <<>>
}


----- WARNING
warning: Int is outside JavaScript's safe integer range
  ┌─ /src/warning/wrn.gleam:3:16
  │
3 │   let assert <<9_007_199_254_740_992:64>> = <<>>
  │                ^^^^^^^^^^^^^^^^^^^^^ This is not a safe integer value on JavaScript

This integer value is too large to be represented accurately by
JavaScript's number type. To avoid this warning integer values must be in
the range -(2^53 - 1) - (2^53 - 1).

See JavaScript's Number.MAX_SAFE_INTEGER and Number.MIN_SAFE_INTEGER
properties for more information.
