compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__label_shorthand_in_call_requires_v1_4.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub type Wibble { Wibble(wibble: Int) }\n\npub fn main() {\n  let wibble = 1\n  Wibble(wibble:)\n}\n"
---
----- SOURCE CODE

pub type Wibble { Wibble(wibble: Int) }

pub fn main() {
  let wibble = 1
  Wibble(wibble:)
}


----- WARNING
warning: Incompatible gleam version range
  ┌─ /src/warning/wrn.gleam:6:10
  │
6 │   Wibble(wibble:)
  │          ^^^^^^^ This requires a Gleam version >= 1.4.0

The label shorthand syntax was introduced in version v1.4.0. But the Gleam
version range specified in your `gleam.toml` would allow this code to run
on an earlier version like v1.0.0, resulting in compilation errors!

Hint: Remove the version constraint from your `gleam.toml` or update it to
be:

    gleam = ">= 1.4.0"
