compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__list_literals_redundant_comparison_2.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main(a, b) { [1] != [a, b(1)] }"
---
----- SOURCE CODE
pub fn main(a, b) { [1] != [a, b(1)] }

----- WARNING
warning: Redundant comparison
  ┌─ /src/warning/wrn.gleam:1:21
  │
1 │ pub fn main(a, b) { [1] != [a, b(1)] }
  │                     ^^^^^^^^^^^^^^^^ This is always `True`

This comparison is redundant since it always succeeds.
