compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__list_literals_redundant_comparison_3.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() { [1] != [1] }"
---
----- SOURCE CODE
pub fn main() { [1] != [1] }

----- WARNING
warning: Redundant comparison
  ┌─ /src/warning/wrn.gleam:1:17
  │
1 │ pub fn main() { [1] != [1] }
  │                 ^^^^^^^^^^ This is always `False`

This comparison is redundant since it always fails.
